--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -1,4 +1,4 @@
-plugins = ['ac3', 'oar', 'audiodecbin', 'typefind', 'dap']
+plugins = ['ac3', 'oar', 'flexr', 'audiodecbin', 'typefind', 'dap']
 
 foreach plugin : plugins
   if not get_option(plugin).disabled()
