--- a/tests/check/meson.build
+++ b/tests/check/meson.build
@@ -1,5 +1,6 @@
 test_defines = [
     '-DGST_TEST_FILES_PATH="' + meson.current_source_dir() + '/../files"',
+    '-DGST_FGEN_FILES_PATH="' + meson.current_build_dir() + '/../../subprojects/dlb_flexr/tests"',
 ]
 
 test_deps = [
@@ -16,15 +17,24 @@ tests = [
   'elements/dlbac3dec.c',
   'elements/dlboar.c',
   'elements/dlbdap.c',
+  'elements/dlbflexr.c',
 ]
+
+env = environment()
+
+env.set('GST_PLUGIN_PATH', join_paths(gst_plugins_dlb_build_dir, 'plugins'))
+env.set('GSETTINGS_BACKEND', 'memory')
+
+# Skip flexr test on platforms different that x86_64, the config generation
+# tools are only available for this platform. Disable forking on qemu.
+if host_machine.cpu_family() != 'x86_64'
+  env.set('GST_CHECKS_IGNORE', 'test_dlb_flexr*')
+  env.set('CK_DEFAULT_TIMEOUT', '60')
+  env.set('CK_FORK', 'no')
+endif
 
 foreach test : tests
   test_name = test.split('.')[0].underscorify()
-
-  env = environment()
-
-  env.set('GST_PLUGIN_PATH', join_paths(gst_plugins_dlb_build_dir, 'plugins'))
-  env.set('GSETTINGS_BACKEND', 'memory')
 
   exe = executable(test_name, test,
     include_directories : configinc,
@@ -32,5 +42,5 @@ foreach test : tests
            dependencies : test_deps,
   )
 
-  test(test_name, exe, timeout: 10 * 60, env: env)
+  test(test_name, exe, timeout: 60, env: env)
 endforeach
