--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,2 +1,4 @@
-subdir('check')
-subdir('integration')
+if not get_option('tests').disabled() and gst_check_dep.found()
+  subdir('check')
+  subdir('integration')
+ endif
