--- a/libs/meta/meson.build
+++ b/libs/meta/meson.build
@@ -7,12 +7,11 @@ dlb_meta_incdir = include_directories('.')
 dlb_meta_lib = shared_library('gstdlbmeta', dlb_meta_sources,
   include_directories : [dlb_meta_incdir, configinc],
                c_args : gst_plugins_dlb_args,
-         dependencies : glib_deps + [gst_base_dep, gst_audio_dep, dlb_evo_dep, dlb_buffer_dep],
+         dependencies : glib_deps + [gst_base_dep, gst_audio_dep],
               install : true,
 )
 
 dlb_meta_dep = declare_dependency(
             link_with : dlb_meta_lib,
-         dependencies : [dlb_evo_dep],
   include_directories : [dlb_meta_incdir],
 )
