--- a/plugins/flexr/meson.build
+++ b/plugins/flexr/meson.build
@@ -8,7 +8,7 @@ dlb_flexr_deps = [
   dlb_utils_dep
 ]
 
-dlb_flexr = shared_library('gstdlbflexr', dlb_flexr_sources,
+dlbflexr = shared_library('gstdlbflexr', dlb_flexr_sources,
                c_args : gst_plugins_dlb_args,
             link_args : gst_plugins_link_args,
   include_directories : configinc,
@@ -16,3 +16,5 @@ dlb_flexr = shared_library('gstdlbflexr', dlb_flexr_sources,
               install : true,
           install_dir : plugins_install_dir
 )
+
+plugins += [dlbflexr]
