--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -1,6 +1,6 @@
-plugins = ['ac3', 'oar', 'flexr', 'audiodecbin', 'typefind', 'dap']
+plugin_opts = ['ac3', 'oar', 'flexr', 'audiodecbin', 'typefind', 'dap']
 
-foreach plugin : plugins
+foreach plugin : plugin_opts
   if not get_option(plugin).disabled()
     subdir(plugin)
   endif
