--- a/tests/integration/meson.build
+++ b/tests/integration/meson.build
@@ -9,5 +9,5 @@ foreach test : tests
   env.set('GST_PLUGIN_PATH', join_paths(gst_plugins_dlb_build_dir, 'plugins'))
   env.set('GST_TEST_FILES_PATH', join_paths(meson.current_source_dir(), '../files'))
 
-  test(test_name, py, args : files(test), env : env)
+  test(test_name, py, args : files(test), env : env, suite: 'python')
 endforeach
